Documentation edits made through Mintlify web editor

--- a/ai-agents/functions.mdx
+++ b/ai-agents/functions.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: 'Functions'
+description: 'Function settings for Ai Agents'
 ---
