--- a/ai-agents/introduction.mdx
+++ b/ai-agents/introduction.mdx
@@ -1,7 +1,6 @@
 ---
 title: 'Introduction to Ai Agents'
-description: 'An are for subheading text for Ai Agents'
-icon: 'code'
+description: 'An introduction to building Ai Agents with Plura'
 ---
 
 ## Basic
