--- a/ai-agents/knowledge-base.mdx
+++ b/ai-agents/knowledge-base.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: 'Knowledge Base'
+description: 'Knowledge Base settings for Ai Agents.'
 ---
