--- a/ai-agents/advanced.mdx
+++ b/ai-agents/advanced.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: 'Advanced'
+description: 'Advanced settings for Ai Agents'
 ---
