--- a/ai-agents/analysis.mdx
+++ b/ai-agents/analysis.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: 'Analysis'
+description: 'Analysis settings for Ai Agents'
 ---
