--- a/ai-agents/configuration.mdx
+++ b/ai-agents/configuration.mdx
@@ -1,4 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: 'Configuration'
+description: 'Configurations settings for Ai Agents'
 ---
