--- a/the-platform/overview.mdx
+++ b/the-platform/overview.mdx
@@ -1,4 +1,174 @@
 ---
 title: 'Overview'
-description: 'The Plura platform overview'
+description: 'A Comprehensive AI Campaign Concept from Plura'
 ---
+
+## Campaign Concept Overview
+
+Plura is a multi-channel AI workflow builder that enables businesses to design sophisticated campaigns across Webchat, SMS, and Voice Call channels. Each campaign consists of modular agents that handle specific tasks, including customer engagement, goal setting, and scheduling, all while maintaining a unified flow of communication.
+ 
+The system is designed to intelligently transition between channels based on user behavior, utilizing agents for each channel, <strong>global agents</strong> for tasks like scheduling and opt-out requests, and <strong>conditional logic</strong> to ensure a smooth and personalized experience throughout the customer journey.
+ 
+## Key Components of a Plura Campaign
+
+1. Modular Agents (Webchat, SMS, Voice Call)
+2. Agent Transitions with Conditional Logic
+3. Global Agents (Scheduling, DNC)
+4. State Management & Contextual Continuity
+5. Goal-Driven Campaigns
+6. Data-Driven Personalization
+
+### 1. Modular Agents
+
+Plura’s core concept revolves around agents—specialized, reusable building blocks that handle interactions across different channels.
+
+<AccordionGroup>
+  <Accordion title="Webchat Agent">
+    <strong>Purpose:</strong> 
+    Engage users in real-time through a chat interface on your website.
+    
+    <strong>Functionality:</strong> Greets users, answers questions, and drive users towards specific actions (e.g., scheduling a call). Use personalized messages based on user data (e.g., name, browsing history).
+
+    <strong>When Active:</strong> Typically used for initial engagement when users first land on a website.
+  </Accordion>
+  <Accordion title="SMS Agent">
+    <strong>Purpose:</strong> 
+    Re-engages users via text messaging, perfect for follow-ups when users leave the webchat or don’t respond.
+    
+    <strong>Functionality:</strong> Sends automated, personalized SMS messages to re-establish contact or keep users engaged. Can handle replies, such as users responding to schedule a call or asking for more information.
+
+    <strong>When Active:</strong> Usually post-webchat when a user doesn’t complete the desired action or as part of a nurturing sequence.
+
+  </Accordion>
+  <Accordion title="Voice Agent">
+    <strong>Purpose:</strong> 
+    Automates AI-driven voice calls to convert leads or handle customer service. 
+    
+    <strong>Functionality:</strong> Handles both inbound and outbound calls. Follows pre-defined scripts or responds dynamically based on the conversation. Aims to meet campaign goals (e.g., sales, appointment booking).
+
+    <strong>When Active:</strong> Typically used after a webchat or SMS engagement to solidify interest and close a sale.
+  </Accordion>
+</AccordionGroup>
+
+### 2. Agent Transitions with Conditional Logic
+
+Plura's campaign flows are designed to adapt dynamically based on user actions, using agent transitions and conditional logic to determine when to switch from one agent to another.
+
+#### How Transitions Work:
+Transitions are based on events. Plura uses these events (e.g., user closes webchat, no SMS response) to trigger a transition between agents.
+
+For example, If a user closes the Webchat without scheduling a demo, the system automatically triggers an SMS Agent to follow up. Transition Example Workflow:
+
+<AccordionGroup>
+  <Accordion title="Webchat (Agent 1)">
+    Conditions (e.g., user hasn't responded in 48 hours, user expresses interest) dictate when and where transitions occur in the campaign. Go to (Agent 2).
+  </Accordion>
+  <Accordion title="SMS Agent (Agent 2)">
+    Send follow-up SMS to keep the user engaged.
+ `condition` If the user doesn't respond after 2 days, initiate an AI Voice Call (Agent 3).
+  </Accordion>
+  <Accordion title="Voice Agent (Agent 3)">
+    Attempt to re-engage the user through a scheduled or proactive AI call. `post-call action` Based on the outcome, either end the campaign if the goal is met, or return to SMS/Webchat.
+  </Accordion>
+</AccordionGroup>
+<strong> Conditional Logic:</strong> Conditions (e.g., user hasn't responded in 48 hours, user expresses interest) dictate when and where transitions occur in the campaign.
+ Example: If a user closes the Webchat without scheduling a demo, the system automatically triggers an SMS Agent to follow up.
+Transition Example Workflow:
+
+Initial Webchat (Agent 1):
+Engage user on the website and try to schedule a call.
+Transition Condition: If the user closes the webchat, transition to SMS outreach.
+
+SMS Follow-Up (Agent 2):
+ Send follow-up SMS to keep the user engaged.
+ Transition Condition: If the user doesn't respond after 2 days, initiate an AI Voice Call (Agent 3).
+
+Voice Call (Agent 3):
+Attempt to re-engage the user through a scheduled or proactive AI call.
+Post-Call Action: Based on the outcome, either end the campaign if the goal is met or return to SMS/Webchat.
+
+3. Global Agents
+Plura's global agents handle common tasks that can be triggered at any point in the campaign. These agents ensure consistency and reduce redundancy by handling tasks centrally, such as scheduling calls or managing opt-out requests.
+
+A. Scheduling Global Agent
+Purpose: Handles scheduling requests across all agents and channels.
+Functionality: Presents available times for calls or appointments, confirms bookings, and updates the campaign's state.
+When Triggered: If a user requests a call in Webchat, SMS, or Voice, this global agent takes over to finalize the appointment.
+
+B. DNC (Do Not Contact) Global Agent
+Purpose: Manages opt-out requests (Do Not Call).
+Functionality: If a user requests not to be contacted, the DNC agent immediately updates the CRM and halts any further communications.
+When Triggered: Can be triggered from any channel (Webchat, SMS, Voice Call) whenever a user expresses their desire to stop communications.
+
+4. State Management & Contextual Continuity
+ To ensure seamless transitions between agents, Plura uses centralized state management. This system tracks all user interactions and maintains their context, so agents can reference past engagements and pick up where the previous interaction left off.
+
+How It Works:
+Centralized User Profile: Stores interaction history, current state (e.g., last active channel), and campaign progress (e.g., call scheduled, goal achieved).
+Real-Time Updates: When a user interacts with Webchat, SMS, or Voice, the system updates the centralized profile so all agents remain in sync.
+Example: If a user was engaged via Webchat but didn't complete an action and switched to SMS later, the system knows where the user left off and picks up the conversation accordingly.
+
+5. Goal-Driven Campaigns
+Plura campaigns are designed around specific goals, such as:
+Making a Sale
+Scheduling a Demo
+Collecting User Information
+Each campaign has a clearly defined goal, and Plura tracks the user's progress towards achieving that goal.
+
+Goal Monitoring:
+Automated Progression: The system moves the user through different agents and channels, continuously checking if the goal has been achieved (e.g., call scheduled, purchase made).
+
+Conditional Logic Based on Goals: If the user achieves the goal early (e.g., schedules a call via Webchat), the system automatically ends further outreach. If the goal isn't met, the campaign continues nurturing the lead.
+
+Example Campaign Flow (Goal: Schedule a Call):
+Webchat Agent: Engage the user on the website.
+Action: Attempt to schedule a call.
+If Successful: End the campaign, update the CRM.
+If Unsuccessful: Transition to SMS follow-up.
+SMS Agent: Re-engage the user via text.
+Action: Attempt to schedule a call through SMS.
+If Successful: End the campaign, update the CRM.
+If Unsuccessful: Initiate an AI Voice Call.
+Voice Call Agent: Initiate a call to engage the user directly.
+Action: Attempt to schedule or confirm the demo.
+Post-Call: Depending on the call's outcome, either mark the goal as achieved or continue nurturing the lead via SMS/Webchat.
+
+6. Data-Driven Personalization
+Plura leverages user data to deliver highly personalized interactions across all channels. Using data stored in the centralized user profile, the system can tailor each message to the user, increasing engagement and relevance.
+
+Personalization Tactics:
+Dynamic Variables: Insert personalized information like [First Name], [Product], and [Last Purchase] into messages.
+
+Data-Driven Decision-Making: Use user history and behavior (e.g., past interactions, engagement level) to determine the next steps in the campaign flow.
+Example of Personalization:
+Webchat Greeting: "Hi [Name], welcome back! I see you've been exploring [Product]. Would you like to schedule a demo?"
+SMS Follow-Up: "Hey [Name], it's been a few days since we talked about [Product]. Are you still interested in scheduling a call?"
+
+Full Example Campaign: Step-by-Step
+Objective: Convert a lead into a customer by scheduling a demo call.
+
+Step 1: User Fills Out a Form (Webchat)
+Trigger: The user submits a form on your website.
+Action: Redirect them to Webchat for real-time engagement.
+
+Step 2: Engage in Webchat (Agent 1)
+Goal: Try to schedule a demo call.
+If Successful: Use the Scheduling Global Agent to confirm the time.
+If Unsuccessful: If the user closes the webchat without scheduling, transition to SMS Agent.
+
+Step 3: SMS Outreach (Agent 2)
+Goal: Send personalized SMS follow-ups to re-engage the user.
+Example Message: "Hi [Name], we noticed you checked out [Product] recently. Want to schedule a quick demo?"
+If Successful: Schedule the call using the Scheduling Global Agent.
+If No Response After X Days: Trigger the Voice Call Agent to initiate an outbound call.
+ 
+Step 4: AI Voice Call (Agent 3)
+Goal: Use an AI Voice Call to either confirm interest or schedule a demo.
+Post-Call: Depending on the outcome, either:
+Goal Achieved: End the campaign, update CRM.
+Goal Not Achieved: Loop back to nurturing via SMS or Webchat.
+Conclusion: How Plura's Campaign Concept Works
+
+Plura's AI-driven Multi-Channel Campaign Builder gives businesses the ability to craft seamless, dynamic customer journeys using Webchat, SMS, and Voice Call agents. By leveraging conditional transitions, global agents, and a centralized state management system, Plura ensures personalized, relevant, and goal-oriented communications across all touchpoints.
+
+This system simplifies the complexity of multi-channel engagement, enhances user experience, and drives better campaign outcomes, such as increased sales or successful appointment bookings.
