--- a/videos/sample-video.mdx
+++ b/videos/sample-video.mdx
@@ -1,1 +1,34 @@
+---
+title: 'Advanced'
+description: 'Advanced feature settings for Ai Campaigns'
+---
 
+<Steps>
+  <Step title="Step 1">
+    This is some rando text
+  </Step>
+  <Step title="Step 2">
+    This is also some rando text
+  </Step>
+</Steps>
+
+## Embeds and HTML elements
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/embed/4KzFe50RQkQ"
+  title="YouTube video player"
+  frameBorder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowFullScreen
+  style={{ width: '100%', borderRadius: '0.5rem' }}
+></iframe>
+
+<br />
+
+<Tip>
+
+Mintlify supports [HTML tags in Markdown](https://www.markdownguide.org/basic-syntax/#html). This is helpful if you prefer HTML tags to Markdown syntax, and lets you create documentation with infinite flexibility.
+
+</Tip>
