Documentation edits made through Mintlify web editor

--- a/the-platform/overview.mdx
+++ b/the-platform/overview.mdx
@@ -1,16 +1,15 @@
 ---
 title: 'Overview'
-description: 'A Comprehensive AI Campaign Concept from Plura'
+description: 'AI Campaigns by Plura Explained'
 ---
 
-## Campaign Concept Overview
+## AI Campaigns Overview
 
 Plura is an omni-channel AI workflow builder that enables businesses to design sophisticated, connected campaigns across Webchat, SMS, and Voice Call channels. Each campaign consists of modular agents that handle specific tasks, including customer engagement, goal setting, and scheduling, all while maintaining a unified flow of communication.
  
-> The system is designed to intelligently transition between channels based on user behavior, utilizing **modular agents** for each channel, **global agents** for tasks like scheduling and opt-out requests, and **conditional logic** to ensure a smooth and personalized experience throughout the customer journey.
->
+The system is designed to intelligently transition between channels based on user behavior, utilizing **modular agents** for each channel, **global agents** for tasks like scheduling and opt-out requests, and **conditional logic** to ensure a smooth and personalized experience throughout the customer journey.
  
-## Key Components of a Plura Campaign
+## Key Components of AI Campaigns
 
 1. Modular Agents (Webchat, SMS, Voice Call)
 2. Agent Transitions with Conditional Logic
@@ -161,7 +160,7 @@ SMS Follow-Up: "Hey `Name`, it's been a few days since we talked about `Product`
 </Steps>
 
 
-## In Summary
+### In Summary
 
 Plura's AI-driven Omni-Channel Campaign Builder gives businesses the ability to craft seamless, dynamic customer journeys using Webchat, SMS, and Voice Call agents. By leveraging conditional transitions, global agents, and a centralized state management system, Plura ensures personalized, relevant, and goal-oriented communications across all touchpoints.
 
