Documentation edits made through Mintlify web editor

--- a/the-platform/overview.mdx
+++ b/the-platform/overview.mdx
@@ -107,9 +107,9 @@ Each campaign has a clearly defined goal. Progress towards achieving that goal i
 </Tip>
 
 #### Goal Monitoring:
-> **Automated Progression:** The system moves the user through different agents and channels, continuously checking if the goal has been achieved (e.g., call scheduled, purchase made).
->
-> **Conditional Logic Based on Goals:** If the user achieves the goal early (e.g., schedules a call via Webchat), the system automatically ends further outreach. If the goal isn't met, the campaign continues nurturing the lead.
+**Automated Progression:** The system moves the user through different agents and channels, continuously checking if the goal has been achieved (e.g., call scheduled, purchase made).
+
+**Conditional Logic Based on Goals:** If the user achieves the goal early (e.g., schedules a call via Webchat), the system automatically ends further outreach. If the goal isn't met, the campaign continues nurturing the lead.
 
 #### Step-by-Step Campaign Example<br/>
 **Objective:** Schedule a call
@@ -131,7 +131,7 @@ Each campaign has a clearly defined goal. Progress towards achieving that goal i
   </Step>
 </Steps>
 
-## 6. Data-Driven Personalization
+### 6. Data-Driven Personalization
 Plura leverages user data to deliver highly personalized interactions across all channels. Using data stored in the centralized user profile, the system can tailor each message to the user, increasing engagement and relevance.
 
 **Personalization Tactics:**<br/>
