Documentation edits made through Mintlify web editor

--- a/the-platform/overview.mdx
+++ b/the-platform/overview.mdx
@@ -18,7 +18,7 @@ The system is designed to intelligently transition between channels based on use
 5. Goal-Driven Campaigns
 6. Data-Driven Personalization
 
-### 1. Modular Agents
+## 1. Modular Agents
 
 Plura’s core concept revolves around agents—specialized, reusable building blocks that handle interactions across different channels.
 
@@ -37,11 +37,11 @@ Plura’s core concept revolves around agents—specialized, reusable building b
   </Accordion>
 </AccordionGroup>
 
-### 2. Agent Transitions with Conditional Logic
+## 2. Agent Transitions with Conditional Logic
 
 Plura's campaign flows are designed to adapt dynamically based on user actions, using agent transitions and conditional logic to determine when to switch from one agent to another.
 
-#### How Transitions Work:
+### How Transitions Work:
 Transitions are based on events. Plura uses these events (e.g., user closes webchat, no SMS response) to trigger a transition between agents.
 
 <Tip>
@@ -50,7 +50,7 @@ Transitions are based on events. Plura uses these events (e.g., user closes webc
 
 </Tip> 
 
-#### Transition Example Workflow:
+### Transition Example Workflow:
 
 <AccordionGroup>
   <Accordion title="Agent 1: Webchat">
@@ -65,7 +65,7 @@ Transitions are based on events. Plura uses these events (e.g., user closes webc
   </Accordion>
 </AccordionGroup>
 
-### 3. Global Agents
+## 3. Global Agents
 Plura's global agents handle common tasks that can be triggered at any point in the campaign. These agents ensure consistency and reduce redundancy by handling tasks centrally, such as scheduling calls or managing opt-out requests.
 
 <AccordionGroup>
@@ -94,7 +94,7 @@ Plura's global agents handle common tasks that can be triggered at any point in 
 **Example:** If a user was engaged via Webchat but didn't complete an action and switched to SMS later, the system knows where the user left off and picks up the conversation accordingly.
 
 </Tip>
-### 5. Goal-Driven Campaigns
+## 5. Goal-Driven Campaigns
 AI campaigns are designed around specific goals, such as:
 - Making a Sale
 - Scheduling a Demo
@@ -131,7 +131,7 @@ Each campaign has a clearly defined goal. Progress towards achieving that goal i
   </Step>
 </Steps>
 
-### 6. Data-Driven Personalization
+## 6. Data-Driven Personalization
 Plura leverages user data to deliver highly personalized interactions across all channels. Using data stored in the centralized user profile, the system can tailor each message to the user, increasing engagement and relevance.
 
 **Personalization Tactics:**<br/>
